[gd_scene load_steps=6 format=3 uid="uid://5wb5xuou85vf"]

[ext_resource type="Script" uid="uid://cyv2lh41dfq81" path="res://addons/inventory-system/editor/items/item_definition_editor.gd" id="1_smo60"]
[ext_resource type="Script" uid="uid://drx1fh0xues8k" path="res://addons/inventory-system/editor/base/item_id_editor.gd" id="2_by1w4"]
[ext_resource type="PackedScene" uid="uid://bl40ri4you0n5" path="res://addons/inventory-system/editor/items/categories_in_item.tscn" id="3_cy8bj"]
[ext_resource type="PackedScene" uid="uid://c1am6gfdvbcgx" path="res://addons/inventory-system/editor/items/custom_properties.tscn" id="3_obam6"]
[ext_resource type="Script" uid="uid://d2183xcpsntk1" path="res://addons/inventory-system/editor/base/icon_selector.gd" id="3_p8qlp"]

[node name="ItemDefinitionEditor" type="Control"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 3
anchors_preset = 0
offset_right = 512.0
script = ExtResource("1_smo60")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ItemIDEditor" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("2_by1w4")

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
text = "Item Name"

[node name="ItemNameTextEdit" type="LineEdit" parent="ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Place Item Name Here"

[node name="Control" type="Control" parent="ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VSeparator" type="VSeparator" parent="ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="IconSelector" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(192, 31)
layout_mode = 2
script = ExtResource("3_p8qlp")

[node name="CanMaxStack" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/CanMaxStack"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
text = "Can Stack"

[node name="CanStackCheckBox" type="CheckBox" parent="ScrollContainer/MarginContainer/VBoxContainer/CanMaxStack"]
unique_name_in_owner = true
layout_mode = 2

[node name="MaxStack" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/MaxStack"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
text = "Item Max Stack"

[node name="MaxStackSpinBox" type="SpinBox" parent="ScrollContainer/MarginContainer/VBoxContainer/MaxStack"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3
allow_greater = true

[node name="WeightAndSize" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Weight" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/WeightAndSize"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/WeightAndSize/Weight"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
text = "Item Weight"

[node name="WeightSpinBox" type="SpinBox" parent="ScrollContainer/MarginContainer/VBoxContainer/WeightAndSize/Weight"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3
max_value = 100000.0
step = 0.001
value = 0.1
allow_greater = true
allow_lesser = true

[node name="VSeparator" type="VSeparator" parent="ScrollContainer/MarginContainer/VBoxContainer/WeightAndSize"]
layout_mode = 2

[node name="Size" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/WeightAndSize"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/WeightAndSize/Size"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
text = "Item Grid Size"

[node name="LabelX" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/WeightAndSize/Size"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
text = "X"

[node name="SizeXSpinBox" type="SpinBox" parent="ScrollContainer/MarginContainer/VBoxContainer/WeightAndSize/Size"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 32)
layout_mode = 2
min_value = 1.0
max_value = 100000.0
value = 1.0
allow_greater = true
update_on_text_changed = true

[node name="LabelX2" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/WeightAndSize/Size"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
text = "Y"

[node name="SizeYSpinBox" type="SpinBox" parent="ScrollContainer/MarginContainer/VBoxContainer/WeightAndSize/Size"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 32)
layout_mode = 2
min_value = 1.0
max_value = 100000.0
value = 1.0
allow_greater = true

[node name="HSeparator2" type="HSeparator" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="CategoriesInItem" parent="ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("3_cy8bj")]
layout_mode = 2

[node name="HSeparator3" type="HSeparator" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="CustomProperties" parent="ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("3_obam6")]
layout_mode = 2

[connection signal="theme_changed" from="." to="." method="_on_theme_changed"]
[connection signal="changed" from="ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ItemIDEditor" to="." method="_on_item_id_editor_changed"]
[connection signal="text_changed" from="ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer/ItemNameTextEdit" to="." method="_on_text_edit_text_changed"]
[connection signal="value_changed" from="ScrollContainer/MarginContainer/VBoxContainer/MaxStack/MaxStackSpinBox" to="." method="_on_max_stack_spin_box_value_changed"]
[connection signal="value_changed" from="ScrollContainer/MarginContainer/VBoxContainer/WeightAndSize/Weight/WeightSpinBox" to="." method="_on_weight_spin_box_value_changed"]
[connection signal="changed" from="ScrollContainer/MarginContainer/VBoxContainer/CategoriesInItem" to="." method="_on_categories_in_item_changed"]
